force-app/main/default/objects/Product__c/fields/ADA__c.field-meta.xml
<CustomField>
    <fullName>ADA__c</fullName>
    <label>ADA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>