force-app/main/default/objects/Product__c/fields/BR_CD__c.field-meta.xml
<CustomField>
    <fullName>BR_CD__c</fullName>
    <label>BR CD</label>
    <length>50</length>
    <type>Text</type>
</CustomField>