force-app/main/default/objects/Product__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>Cost</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>