force-app/main/default/objects/Product__c/fields/CS__c.field-meta.xml
<CustomField>
    <fullName>CS__c</fullName>
    <label>CS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>