force-app/main/default/objects/Product__c/fields/Discontinued__c.field-meta.xml
<CustomField>
    <fullName>Discontinued__c</fullName>
    <label>Discontinued</label>
    <type>DateTime</type>
</CustomField>