force-app/main/default/objects/Product__c/fields/Div_No__c.field-meta.xml
<CustomField>
    <fullName>Div_No__c</fullName>
    <label>Div No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>