force-app/main/default/objects/Product__c/fields/ES__c.field-meta.xml
<CustomField>
    <fullName>ES__c</fullName>
    <label>ES</label>
    <length>1</length>
    <type>Text</type>
</CustomField>