force-app/main/default/objects/Product__c/fields/HMC__c.field-meta.xml
<CustomField>
    <fullName>HMC__c</fullName>
    <label>HMC</label>
    <type>TextArea</type>
</CustomField>