force-app/main/default/objects/Product__c/fields/Landed_Cost__c.field-meta.xml
<CustomField>
    <fullName>Landed_Cost__c</fullName>
    <label>Landed Cost</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>