force-app/main/default/objects/Product__c/fields/LN_DS__c.field-meta.xml
<CustomField>
    <fullName>LN_DS__c</fullName>
    <label>LN DS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>