force-app/main/default/objects/Product__c/fields/MFG__c.field-meta.xml
<CustomField>
    <fullName>MFG__c</fullName>
    <label>MFG CD</label>
    <length>50</length>
    <type>Text</type>
</CustomField>