force-app/main/default/objects/Product__c/fields/MFG_Stock_No__c.field-meta.xml
<CustomField>
    <fullName>MFG_Stock_No__c</fullName>
    <label>MFG Stock No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>