force-app/main/default/objects/Product__c/fields/NPL0B__c.field-meta.xml
<CustomField>
    <fullName>NPL0B__c</fullName>
    <label>NPL0B</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>