force-app/main/default/objects/Product__c/fields/NPL10__c.field-meta.xml
<CustomField>
    <fullName>NPL10__c</fullName>
    <label>NPL10</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>