force-app/main/default/objects/Product__c/fields/NPL20__c.field-meta.xml
<CustomField>
    <fullName>NPL20__c</fullName>
    <label>NPL20</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>