force-app/main/default/objects/Product__c/fields/NPL30__c.field-meta.xml
<CustomField>
    <fullName>NPL30__c</fullName>
    <label>NPL30</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>