force-app/main/default/objects/Product__c/fields/Product_Height__c.field-meta.xml
<CustomField>
    <fullName>Product_Height__c</fullName>
    <label>Product Height</label>
    <length>100</length>
    <type>Text</type>
</CustomField>