force-app/main/default/objects/Product__c/fields/Product_Length__c.field-meta.xml
<CustomField>
    <fullName>Product_Length__c</fullName>
    <label>Product Length</label>
    <length>100</length>
    <type>Text</type>
</CustomField>