force-app/main/default/objects/Product__c/fields/Product_Weight__c.field-meta.xml
<CustomField>
    <fullName>Product_Weight__c</fullName>
    <label>Product Weight</label>
    <length>50</length>
    <type>Text</type>
</CustomField>