force-app/main/default/objects/Product__c/fields/Replacement_Product__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Product__c</fullName>
    <label>Replacement Product</label>
    <length>20</length>
    <type>Text</type>
</CustomField>