force-app/main/default/objects/Product__c/fields/Return_Flag__c.field-meta.xml
<CustomField>
    <fullName>Return_Flag__c</fullName>
    <label>Return Flag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>