force-app/main/default/objects/Product__c/fields/SBL_No__c.field-meta.xml
<CustomField>
    <fullName>SBL_No__c</fullName>
    <label>SBL No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>