force-app/main/default/objects/Product__c/fields/SCS_CAT__c.field-meta.xml
<CustomField>
    <fullName>SCS_CAT__c</fullName>
    <label>SCS CAT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>