force-app/main/default/objects/Product__c/fields/SCS_Type__c.field-meta.xml
<CustomField>
    <fullName>SCS_Type__c</fullName>
    <label>SCS Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>