force-app/main/default/objects/Product__c/fields/Sears_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Sears_Product_ID__c</fullName>
    <label>Sears Product ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>