force-app/main/default/objects/Product__c/fields/Sub_Down__c.field-meta.xml
<CustomField>
    <fullName>Sub_Down__c</fullName>
    <label>Sub Down</label>
    <length>20</length>
    <type>Text</type>
</CustomField>