force-app/main/default/objects/Product__c/fields/Sub_Up__c.field-meta.xml
<CustomField>
    <fullName>Sub_Up__c</fullName>
    <label>Sub Up</label>
    <length>20</length>
    <type>Text</type>
</CustomField>