force-app/main/default/objects/Product__c/fields/UN__c.field-meta.xml
<CustomField>
    <fullName>UN__c</fullName>
    <label>UN</label>
    <length>1</length>
    <type>Text</type>
</CustomField>